Updated template image for prac 05 and updated top instructions

--- a/prac05-CSSLayout.html
+++ b/prac05-CSSLayout.html
@@ -140,9 +140,8 @@ code.section {
     <li>To use appropriate CSS for creating page layouts  </li>
   </ul>
   <h2>Learn By Example:</h2>
-  <p>In DreamWeaver, create a new HTML file, but instead of choosing &lt;none&gt; for layout, choose the <strong>3 column fixed</strong> layout. <br>
-    Choose &quot;Create New File&quot; for the CSS location&quot;:<br>
-  <img src="DWnewFile-Layout.png" width="449" height="278" alt="New file in Dreamweaver - with 3 column layout"/></p>
+  <p>In DreamWeaver, create a new HTML file, but instead of choosing "New Document", click "Starter Template" then <strong>Responsive Starters</strong> and choose a layout from the popout menu.<br>
+  <img src="DWnewFile-Layout.png" width="449" height="278" alt="New file in Dreamweaver - with starter templates"/></p>
   <p>Take some time to study how this example works. <br>
     One way to do that is to save it and preview/open it in Chrome, then use the inspect element option when you right-click on part of the page... then navigate around the HTML code on the left, viewing the CSS code on the right:<br>
   </p>
