Added notes about copying dependent files (includes image)

--- a/prac05-CSSLayout.html
+++ b/prac05-CSSLayout.html
@@ -142,6 +142,8 @@ code.section {
   <h2>Learn By Example:</h2>
   <p>In DreamWeaver, create a new HTML file, but instead of choosing "New Document", click "Starter Template" then <strong>Responsive Starters</strong> and choose a layout from the popout menu.<br>
   <img src="DWnewFile-Layout.png" width="449" height="278" alt="New file in Dreamweaver - with starter templates"/></p>
+    <p>When asked to save the page, save the page in a <strong>new</strong> folder and click <strong>Copy</strong> on the "Copy Dependent Files" popup to copy all needed files into the new folder.<br>
+  <img src="DWTemplate-Copy_Files.png" width="517" height="323" alt="Copy files to folder popup" /></p>
   <p>Take some time to study how this example works. <br>
     One way to do that is to save it and preview/open it in Chrome, then use the inspect element option when you right-click on part of the page... then navigate around the HTML code on the left, viewing the CSS code on the right:<br>
   </p>
