Added note about the difference between GitHub client and website

--- a/prac04-GitHub.html
+++ b/prac04-GitHub.html
@@ -151,6 +151,11 @@
     <ul>
         <li>To get set up for and practise using GitHub for version control and collaboration</li>
     </ul>
+      <div class="notebox">
+    <h4>Note</h4>
+    <p>This practical uses both GitHub (an online website for repository hosting) and the GitHub client (installed on the computers). Please read the instructions carefully.</p>
+    <p>If you cannot find an option in the GitHub <strong>client</strong>, try searching for it on the GitHub <strong>website</strong>.</p>
+  </div>
     <h2>GitHub:</h2>
     <p>Git (version control) and GitHub (Web interface/storage for git projects) are superb tools that you should be
         using. In particular, they will be invaluable for your group work assignment.<br>
