--- a/prac04-GitHub.html
+++ b/prac04-GitHub.html
@@ -168,7 +168,7 @@
     <p>While you're waiting for it to install, get started on the rest:</p>
     <ul>
         <li>If you don't have one yet, please create a free account at <a href="https://github.com/" target="_blank">https://github.com/</a><br>
-            <strong>Imprtant! </strong>Use a recognisable name for your account, like jimmysmith, not js1995.<br>
+            <strong>Important! </strong>Use a recognisable name for your account, like jimmysmith, not js1995.<br>
             Your GitHub profile will become an important part of your resume!
         </li>
         <li>Then please upgrade your account to a free student account at: <a
