Bolded assessment repos must be public

--- a/prac04-GitHub.html
+++ b/prac04-GitHub.html
@@ -173,8 +173,8 @@
         </li>
         <li>Then please upgrade your account to a free student account at: <a
                 href="https://education.github.com/discount_requests/new" target="_blank">https://education.github.com/discount_requests/new</a>
-            - this allows you to have private repositories for free... but your repository for the project must be
-            public.
+            - this allows you to have private repositories for free... but your repository for your assignments <strong>must be
+            public</strong>.
         </li>
         <li>Then, read the article on <a href="http://needmoredesigns.com/blog/github-assisted-web-development/"
                                          target="_blank">GitHub-assisted Web Development</a>
