Added notes to distinguish when to use GitHub website vs client

--- a/prac04-GitHub.html
+++ b/prac04-GitHub.html
@@ -195,12 +195,12 @@
                 </li>
             </ul>
         </li>
-        <li>Now create a <strong>repository</strong> (repo) for your Training Zone site online:<br>
+        <li>Now, on the GitHub website, create a <strong>repository</strong> (repo) for your Training Zone site:<br>
             <img src="GitHub_comNewRepoButton.png" width="327" height="121" alt=""/><br>
             ...
             <br>
             <img src="GitHub_comNewRepo.png" width="773" height="471" alt=""/></li>
-        <li>Run the GitHub client program and enter your username and password in the Options</li>
+        <li>Run the GitHub <strong>client</strong> program and enter your username and password in the Options</li>
         <li>Then you can clone this new repo to your desktop through the client interface <br>
             (or clicking on the &quot;Clone In Desktop&quot; on the website might work depending on how the client
             installed).<br>
