Prac04 + Prac05 changes (#2)
* Updated template image for prac 05 and updated top instructions

* Added notes about copying dependent files (includes image)

* Updated the Chrome inspector image for prac05. Also modified instructions to work with new DW templates

* Added note about the difference between GitHub client and website

* Typo fix

* Bolded assessment repos must be public

* Added notes to distinguish when to use GitHub website vs client

--- a/prac04-GitHub.html
+++ b/prac04-GitHub.html
@@ -151,6 +151,11 @@
     <ul>
         <li>To get set up for and practise using GitHub for version control and collaboration</li>
     </ul>
+      <div class="notebox">
+    <h4>Note</h4>
+    <p>This practical uses both GitHub (an online website for repository hosting) and the GitHub client (installed on the computers). Please read the instructions carefully.</p>
+    <p>If you cannot find an option in the GitHub <strong>client</strong>, try searching for it on the GitHub <strong>website</strong>.</p>
+  </div>
     <h2>GitHub:</h2>
     <p>Git (version control) and GitHub (Web interface/storage for git projects) are superb tools that you should be
         using. In particular, they will be invaluable for your group work assignment.<br>
@@ -163,13 +168,13 @@
     <p>While you're waiting for it to install, get started on the rest:</p>
     <ul>
         <li>If you don't have one yet, please create a free account at <a href="https://github.com/" target="_blank">https://github.com/</a><br>
-            <strong>Imprtant! </strong>Use a recognisable name for your account, like jimmysmith, not js1995.<br>
+            <strong>Important! </strong>Use a recognisable name for your account, like jimmysmith, not js1995.<br>
             Your GitHub profile will become an important part of your resume!
         </li>
         <li>Then please upgrade your account to a free student account at: <a
                 href="https://education.github.com/discount_requests/new" target="_blank">https://education.github.com/discount_requests/new</a>
-            - this allows you to have private repositories for free... but your repository for the project must be
-            public.
+            - this allows you to have private repositories for free... but your repository for your assignments <strong>must be
+            public</strong>.
         </li>
         <li>Then, read the article on <a href="http://needmoredesigns.com/blog/github-assisted-web-development/"
                                          target="_blank">GitHub-assisted Web Development</a>
@@ -190,12 +195,12 @@
                 </li>
             </ul>
         </li>
-        <li>Now create a <strong>repository</strong> (repo) for your Training Zone site online:<br>
+        <li>Now, on the GitHub website, create a <strong>repository</strong> (repo) for your Training Zone site:<br>
             <img src="GitHub_comNewRepoButton.png" width="327" height="121" alt=""/><br>
             ...
             <br>
             <img src="GitHub_comNewRepo.png" width="773" height="471" alt=""/></li>
-        <li>Run the GitHub client program and enter your username and password in the Options</li>
+        <li>Run the GitHub <strong>client</strong> program and enter your username and password in the Options</li>
         <li>Then you can clone this new repo to your desktop through the client interface <br>
             (or clicking on the &quot;Clone In Desktop&quot; on the website might work depending on how the client
             installed).<br>
