--- a/prac05-CSSLayout.html
+++ b/prac05-CSSLayout.html
@@ -140,20 +140,19 @@ code.section {
     <li>To use appropriate CSS for creating page layouts  </li>
   </ul>
   <h2>Learn By Example:</h2>
-  <p>In DreamWeaver, create a new HTML file, but instead of choosing &lt;none&gt; for layout, choose the <strong>3 column fixed</strong> layout. <br>
-    Choose &quot;Create New File&quot; for the CSS location&quot;:<br>
-  <img src="DWnewFile-Layout.png" width="449" height="278" alt="New file in Dreamweaver - with 3 column layout"/></p>
+  <p>In DreamWeaver, create a new HTML file, but instead of choosing "New Document", click "Starter Template" then <strong>Responsive Starters</strong> and choose a layout from the popout menu.<br>
+  <img src="DWnewFile-Layout.png" width="449" height="278" alt="New file in Dreamweaver - with starter templates"/></p>
+    <p>When asked to save the page, save the page in a <strong>new</strong> folder and click <strong>Copy</strong> on the "Copy Dependent Files" popup to copy all needed files into the new folder.<br>
+  <img src="DWTemplate-Copy_Files.png" width="517" height="323" alt="Copy files to folder popup" /></p>
   <p>Take some time to study how this example works. <br>
     One way to do that is to save it and preview/open it in Chrome, then use the inspect element option when you right-click on part of the page... then navigate around the HTML code on the left, viewing the CSS code on the right:<br>
   </p>
   <p><img src="ChromeInspect.png" width="513" height="300" alt="Chrome - Inspect Element"/></p>
-  <p>Thankfully, as this page tells you, &quot;the CSS for these layouts is heavily commented&quot;. E.g. </p>
-<pre>/* ~~ This fixed width container surrounds all other blocks ~~ */
-.container {
-	width: 960px;
-	background-color: #FFFFFF;
-	margin: 0 auto; /* the auto value on the sides, coupled with the width, centers the layout */
-}</pre>
+  <p>The page should be quite well commented and explain what each section is used for.</p>
+    <div class="notebox">
+    <h4>Important!</h4>
+    <p>Don't worry if you don't understand what the <strong>@media</strong> lines in the CSS mean. This is stuff we will be looking at in the coming weeks :)</p>
+  </div>
   <p>
   So: 
     </p>
@@ -163,8 +162,7 @@ code.section {
     <ul>
       <li>make an extra link in the nav</li>
       <li>create a section within the main content section that has two even columns within it</li>
-      <li>(perhaps try this one on a new file) adjust the size of the columns - make the main content and aside both the same size (think about the 'grid' implied here)</li>
-      <li>(perhaps try this one on a new file) make a flexible version so that the content column (but not the left and right ones) stretch.</li>
+      <li>change the main image to be on the right side of the text</li>
     </ul>
       </li>
     <li>try and use a similar layout for one or more of your pages for any of your sites so far.  </li>
