Updated 'Save for Web' instructions

--- a/prac07-Photoshop.html
+++ b/prac07-Photoshop.html
@@ -168,7 +168,7 @@ code.section {
     <li>One of the most common imaging tasks you will have to do is resizing and compressing large images.
       <ol>
         <li>Open the sunsetScenery.jpg image (a 4.5MB image). </li>
-        <li>Choose <strong>Save for Web</strong> from the File menu and change the top tab to <strong>4-Up</strong>. <br>
+        <li>From the File menu, choose <strong>Export</strong> then <strong>Save for Web (Legacy)</strong> and change the top tab to <strong>4-Up</strong>. <br>
         This lets you experiment with different settings and see the expected results before you export the file.</li>
         <li> Click on one of the 4 panels and then change settings on the right. <br>
           Click on a different panel and try other settings, comparing the results to the other panels. <br>
